--- a/My_portfolioweb/My_portfolioweb/style.css
+++ b/My_portfolioweb/My_portfolioweb/style.css
@@ -566,7 +566,7 @@ body {
     font-family: 'Poppins', sans-serif;
 } */
 
-.card {
+/* .card {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -758,4 +758,99 @@ body {
     .content h3 {
         font-size: 1rem;
     }
+} */
+
+
+
+
+
+/* Contact Section */
+
+
+
+.contact{
+    background: var(--bg-color);
+}
+
+.contact h2{
+    margin-bottom: 3rem;
+    color: white;
+}
+
+.contact form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin: 5rem auto;
+    text-align: center;
+}
+
+.contact form .input-box{
+    display: flex;
+ flex-wrap: wrap;
+     justify-content: center;
+
+}
+
+.contact form .input-box .input,
+ .contact form .textarea{
+    width: 100%;
+    margin:1.5rem;
+    padding: 2.5rem ;
+    background: var(--second-bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 2rem;
+    color: var(--text-color);
+    font-size: 1.8rem;
+    resize: none;
+}
+
+
+.contact form.btn{
+    margin-top: 5rem;
+}
+
+.footer{
+    position: relative;
+    bottom: 0;
+    padding: 40px 0;
+    width: 100%;
+    background: var(--second-bg-color);
+}
+
+.footer .social{
+    text-align: center;
+    padding-bottom: 25px;
+    color: var(--main-color);
+}
+
+.footer .social a{
+    font-size: 25px;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+}
+
+.footer.social a:hover{
+    transform: scale(1.3) translateY(-10px);
+    background-color: var(--main-color);
+    color: #000;
+    box-shadow: 0 0 25px var(--main-color);  
+}
+
+.footer ul{
+    margin-top: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
 }
